[package]
name = "ezproxy"
description = "Keyboard Shortcuts for Your Address Bar"
version = "0.1.0"
edition = "2021"
authors = ["Travis Kaufman <travis.kaufman@gmail.com>"]
license = "MIT"

[lib]
name = "ezproxy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
log = "0.4.14"
pretty_env_logger = "0.4.0"
clap = { version = "3.2.8", features = ["derive"] }
http = "0.2.6"
querystring = "1.1.0"
urlencoding = "2.1.0"
regex = "1.5.6"
lazy_static = "1.4.0"
